--- a/第2回目コーディング課題1_戸髙/index.html
+++ b/第2回目コーディング課題1_戸髙/index.html
@@ -6,20 +6,21 @@
         <title>第二回目コーディング課題</title>
         <link rel="stylesheet" href="css/style.css" />
     </head>
-    <body></body>
+
+    <body>
+        <div class="wrap1">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div class="wrap2">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </body>
 </html>
-
-<div class="wrap1">
-    <div></div>
-    <div></div>
-    <div></div>
-</div>
-
-<div class="wrap2">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-</div>
