第３回目課題_2−2

--- a/第3回目課題＿２/index.html
+++ b/第3回目課題＿２/index.html
@@ -9,34 +9,40 @@
 
     <body>
         <h1>サービス</h1>
-    </body>
 
-    <div class="contents">
-        <div class="wrap">
-            <div class="card-list">
-                <p><img src="images/main_1.jpg" alt="image1" /></p>
+        <div class="contents">
+            <div class="wrap">
+                <div class="card-list">
+                    <p class="photo">
+                        <img src="images/main_1.jpg" alt="image1" />
+                    </p>
 
-                <h2>サービス１</h2>
-                <h3>
-                    サービス１サービス１サービス１サービス１サービス１サービス１サービス１
-                </h3>
-            </div>
+                    <h2>サービス１</h2>
+                    <h3>
+                        サービス１サービス１サービス１サービス１サービス１サービス１サービス１
+                    </h3>
+                </div>
 
-            <div class="card-list">
-                <p><img src="images/main_2.png" alt="image2" /></p>
-                <h2>サービス2</h2>
-                <h3>
-                    サービス2サービス2サービス2サービス2サービス2サービス2サービス2
-                </h3>
-            </div>
+                <div class="card-list">
+                    <p class="photo">
+                        <img src="images/main_2.png" alt="image2" />
+                    </p>
+                    <h2>サービス2</h2>
+                    <h3>
+                        サービス2サービス2サービス2サービス2サービス2サービス2サービス2
+                    </h3>
+                </div>
 
-            <div class="card-list">
-                <p><img src="images/main_3.png" alt="image3" /></p>
-                <h2>サービス3</h2>
-                <h3>
-                    サービス3サービス3サービス3サービス3サービス3サービス3サービス3
-                </h3>
+                <div class="card-list">
+                    <p class="photo">
+                        <img src="images/main_3.png" alt="image3" />
+                    </p>
+                    <h2>サービス3</h2>
+                    <h3>
+                        サービス3サービス3サービス3サービス3サービス3サービス3サービス3
+                    </h3>
+                </div>
             </div>
         </div>
-    </div>
+    </body>
 </html>
