--- a/CAFESITE/index.html
+++ b/CAFESITE/index.html
@@ -133,17 +133,16 @@
         <div class="closing_left">
      <p class="closing_word"><img src="images/design_cafe_logo_footer@2x.png"alt="デザインカフェ"/></p></div>
 
-     <div class="closing_center">
      <p class="closing_info">OPEN 18:00 / CLOSE 24:00<br />
                              〒150-0022<br />
                              東京都渋谷区東京南123デザインビルB1<br />
                              MAIL：info@designcafe.tokyo</p>
         </div>
-    <div class="closing_right">
+
         <p class="bottom">
         <a href="#header"><img src="images/to_top@2x.png"alt="トップボタン"/></a></p>
 
-    </div></div>
+    </div>
 
     <p class="copyright">© 2021 DESIGN CAFE</p>
 
